--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
-    "name": "meu-projeto",
-    "version": "1.0.0",
-    "description": "Meu primeiro projeto React",
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2",
-      "react-scripts": "4.0.3"
-    }
+  "name": "reactfirst",
+  "version": "0.1.0",
+  "homepage": "https://arturmauricioss/arturmauricioss.github.io", 
+  "scripts": {
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build" 
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
-  
+}
